static/css/style.css
/*---------------------------------------------------------- Color */

.text-shadow {
    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
}

/*---------------------------------------------------------- Font */

.font-size-large {
    font-size: x-large;
}

.card .card-title {
    font-size: 13px;
}

.uppercase {
    text-transform: uppercase;
}

.capitalize {
    text-transform: capitalize;
}

@media only screen and (max-width: 580px) {
    nav .brand-logo {
        font-size: medium;
    }
}

.material-tooltip {
    font-size: x-large;
    font-weight: 500;
    background-color: rgba(255,255,255,0.8);
    color: black;
    position: absolute;
}

/*---------------------------------------------------------- Book Icon */

.fa-book-open:before {
    padding-left: 15px;
}

/*---------------------------------------------------------- Flashes */
.flashes h4 {
    line-height: 2;
}

/*---------------------------------------------------------- review cards */
.card .card-image img {
    height: 450px;
}

.card-height {
    height: 800px;
}

.truncate {
    white-space: normal;
    overflow: hidden;
    text-overflow: ellipsis;
}

.spacing {
    height: 5px;
}

#fix-btn-location {
    position: absolute;
    bottom: 15px;
    left: 24px;
}

.modal {
    padding-bottom: 24px;
}

.card h5 {
    padding-bottom: 5px;
}

